Rename ipc to rpc Implementing JSON-RPC

--- a/configure.ac
+++ b/configure.ac
@@ -168,8 +168,8 @@ httpd/Makefile
 json/Makefile
 json/ui/Makefile
 libcore/Makefile
-libipc/Makefile
-libipc/tests/Makefile
+librpc/Makefile
+librpc/tests/Makefile
 libmodule/Makefile
 man/Makefile
 man/fr/Makefile
