Update hash table for rehashing on overflow

--- a/librpc/tests/Makefile.am
+++ b/librpc/tests/Makefile.am
@@ -1,7 +1,7 @@
 check_PROGRAMS= \
 rpc-client-test
 
-LDADD=$(top_builddir)/librpc/libarmadito-rpc.a @LIBJANSSON_LIBS@
+LDADD=$(top_builddir)/librpc/libarmadito-rpc.a @LIBJANSSON_LIBS@ -lm
 AM_CPPFLAGS=-I$(top_srcdir)/librpc/include -I$(top_srcdir)/libmodule/include @LIBJANSSON_CFLAGS@
 
 #ipcsendtest_SOURCES=ipcsendtest.c
