--- a/librpc/tests/Makefile.am
+++ b/librpc/tests/Makefile.am
@@ -8,8 +8,5 @@ AM_CPPFLAGS=-I$(top_srcdir)/librpc/include -I$(top_srcdir)/librpc -I$(top_srcdir
 #ipcsendtest_SOURCES=ipcsendtest.c
 #ipcreceivetest_SOURCES=ipcreceivetest.c
 
-rpc_client_test_SOURCES= rpc-client-test.c
-rpc_server_test_SOURCES= rpc-server-test.c
-
-
-
+rpc_client_test_SOURCES= rpc-client-test.c libtest.c libtest.h
+rpc_server_test_SOURCES= rpc-server-test.c libtest.c libtest.h
