--- a/libjrpc/Makefile.am
+++ b/libjrpc/Makefile.am
@@ -4,9 +4,9 @@ AUTOMAKE_OPTIONS=subdir-objects
 #see: https://www.gnu.org/software/automake/manual/html_node/Subdirectories.html
 SUBDIRS=. tests
 
-noinst_LIBRARIES=libarmadito-rpc.a
+noinst_LIBRARIES=libjrpc.a
 
-libarmadito_rpc_a_SOURCES= \
+libjrpc_a_SOURCES= \
 buffer.c \
 buffer.h \
 common.h \
@@ -19,4 +19,4 @@ marshallfuns.h \
 unmarshallfuns.c \
 unmarshallfuns.h
 
-AM_CPPFLAGS= -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include -I$(top_srcdir) -I$(top_srcdir)/librpc @LIBJANSSON_CFLAGS@
+AM_CPPFLAGS= -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include -I$(top_srcdir) -I$(top_srcdir)/libjrpc @LIBJANSSON_CFLAGS@
