--- a/libjrpc/Makefile.am
+++ b/libjrpc/Makefile.am
@@ -15,9 +15,7 @@ hash.c \
 hash.h \
 mapper.c \
 marshallfuns.c \
-marshallfuns.h \
-unmarshallfuns.c \
-unmarshallfuns.h
+unmarshallfuns.c 
 
 # -DDEBUG because is #defined in top-level config header
 AM_CPPFLAGS=-DDEBUG -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include -I$(top_srcdir) -I$(top_srcdir)/libjrpc @LIBJANSSON_CFLAGS@
