Simplify a lot marshalling/unmarshalling code No more called functions, more inlining

--- a/libjrpc/tests/Makefile.am
+++ b/libjrpc/tests/Makefile.am
@@ -3,7 +3,7 @@ rpc-client-test \
 rpc-server-test
 
 LDADD=$(top_builddir)/libjrpc/libjrpc.a @LIBJANSSON_LIBS@ -lm
-AM_CPPFLAGS=-I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include @LIBJANSSON_CFLAGS@
+AM_CPPFLAGS=-I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include @LIBJANSSON_CFLAGS@ -save-temps
 
 #ipcsendtest_SOURCES=ipcsendtest.c
 #ipcreceivetest_SOURCES=ipcreceivetest.c
