--- a/libjrpc/Makefile.am
+++ b/libjrpc/Makefile.am
@@ -9,13 +9,11 @@ noinst_LIBRARIES=libjrpc.a
 libjrpc_a_SOURCES= \
 buffer.c \
 buffer.h \
-common.h \
 connection.c \
 hash.c \
 hash.h \
 mapper.c \
-marshallfuns.c \
-unmarshallfuns.c 
+marshall.c 
 
 # -DDEBUG because is #defined in top-level config header
-AM_CPPFLAGS=-DDEBUG -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include -I$(top_srcdir) -I$(top_srcdir)/libjrpc @LIBJANSSON_CFLAGS@
+AM_CPPFLAGS=-DDEBUG -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include -I$(top_srcdir) -I$(top_srcdir)/libjrpc @LIBJANSSON_CFLAGS@ -save-temps
