--- a/libjrpc/tests/Makefile.am
+++ b/libjrpc/tests/Makefile.am
@@ -8,5 +8,19 @@ AM_CPPFLAGS=-I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include @L
 #ipcsendtest_SOURCES=ipcsendtest.c
 #ipcreceivetest_SOURCES=ipcreceivetest.c
 
-rpc_client_test_SOURCES= rpc-client-test.c libtest.c libtest.h test.h test.c test-marshall.h
-rpc_server_test_SOURCES= rpc-server-test.c libtest.c libtest.h test.h test.c test-marshall.h
+COMMON_SOURCES= \
+armadito.c \
+armadito-marshall.h \
+libtest.c \
+libtest.h \
+test.h \
+test.c \
+test-marshall.h
+
+rpc_client_test_SOURCES= \
+rpc-client-test.c \
+$(COMMON_SOURCES)
+
+rpc_server_test_SOURCES= \
+rpc-server-test.c \
+$(COMMON_SOURCES)
