--- a/libjrpc/Makefile.am
+++ b/libjrpc/Makefile.am
@@ -16,7 +16,7 @@ mapper.c \
 marshall.c 
 
 # -DDEBUG because is #defined in top-level config header
-AM_CPPFLAGS=-DDEBUG -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include -I$(top_srcdir) -I$(top_srcdir)/libjrpc @LIBJANSSON_CFLAGS@ -save-temps
+AM_CPPFLAGS=$(PTHREAD_CFLAGS) -DDEBUG -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include -I$(top_srcdir) -I$(top_srcdir)/libjrpc @LIBJANSSON_CFLAGS@ -save-temps 
 
 noinst_HEADERS= \
 include/libjrpc/jrpc.h \
