Move to unix socket & refactor code

--- a/libjrpc/Makefile.am
+++ b/libjrpc/Makefile.am
@@ -10,8 +10,10 @@ libjrpc_a_SOURCES= \
 buffer.c \
 buffer.h \
 connection.c \
+connection.h \
 hash.c \
 hash.h \
+jrpc.c \
 mapper.c \
 marshall.c 
 
