--- a/libjrpc/tests/Makefile.am
+++ b/libjrpc/tests/Makefile.am
@@ -6,7 +6,7 @@ rpc-server-test
 
 LDFLAGS=$(PTHREAD_CFLAGS)
 LDADD=$(top_builddir)/libjrpc/libjrpc.a $(PTHREAD_LIBS) @LIBJANSSON_LIBS@ -lm
-AM_CPPFLAGS=$(PTHREAD_CFLAGS) -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include @LIBJANSSON_CFLAGS@ -save-temps $(PTHREAD_LIBS)
+AM_CPPFLAGS=$(PTHREAD_CFLAGS) -I$(top_srcdir) -I$(top_srcdir)/libjrpc/include -I$(top_srcdir)/libmodule/include @LIBJANSSON_CFLAGS@ -save-temps $(PTHREAD_LIBS)
 
 #ipcsendtest_SOURCES=ipcsendtest.c
 #ipcreceivetest_SOURCES=ipcreceivetest.c
