Fix daemon compilation

--- a/arch/linux/daemon/Makefile.am
+++ b/arch/linux/daemon/Makefile.am
@@ -3,13 +3,11 @@ AUTOMAKE_OPTIONS=subdir-objects
 sbin_PROGRAMS=armadito-scand
 
 AM_CPPFLAGS= -DLOCALSTATEDIR=\"$(localstatedir)\"
-armadito_scand_CFLAGS=-I$(top_srcdir)/libarmadito/include -I$(top_srcdir) -I$(top_srcdir)/arch/linux -I$(top_srcdir)/json/ui -I$(top_srcdir)/libarmadito/src -DA6O_MHD_CONTENT_ROOT_DIR='"$(datadir)/armadito"' @GLIB2_CFLAGS@ @GIO2_CFLAGS@ @GTHREAD2_CFLAGS@ @LIBJANSSON_CFLAGS@ 
-armadito_scand_LDADD=$(top_builddir)/libarmadito/src/libarmadito.la $(top_builddir)/json/ui/libarmadito_json.la @GLIB2_LIBS@ @GIO2_LIBS@ @GTHREAD2_LIBS@ @LIBJANSSON_LIBS@
+armadito_scand_CFLAGS=-I$(top_srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir)/libcore/include -I$(top_srcdir)/arch/linux @GLIB2_CFLAGS@ @GIO2_CFLAGS@ @GTHREAD2_CFLAGS@ @LIBJANSSON_CFLAGS@ 
+armadito_scand_LDADD=$(top_builddir)/libcore/libcore.a $(top_builddir)/libmodule/libarmadito.la @GLIB2_LIBS@ @GIO2_LIBS@ @GTHREAD2_LIBS@ @LIBJANSSON_LIBS@
 
 armadito_scand_SOURCES= \
 main.c \
-jsonclient.c \
-jsonclient.h \
 log.c \
 log.h \
 server.c \
