Move libjrpc to subdirectory Making place for av rpc implementation

--- a/configure.ac
+++ b/configure.ac
@@ -169,9 +169,10 @@ arch/linux/service/Makefile
 conf/Makefile
 httpd/Makefile
 libcore/Makefile
-libjrpc/Makefile
-libjrpc/tests/Makefile
 libmodule/Makefile
+librpc/Makefile
+librpc/jrpc/Makefile
+librpc/jrpc/tests/Makefile
 man/Makefile
 man/fr/Makefile
 tests/Makefile
