Set branch DEV for sonarqube

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ addons:
     build_command_prepend: "./configure; make clean"
     build_command: make -j 4
     branch_pattern: coverity_scan
-  sonarqube: true
+  sonarqube:
+    branches :
+    - DEV
 
 env:
   global:
