--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
-sonar.projectKey=armadito:core
+sonar.projectKey=armadito:core:DEV
 sonar.projectName=armadito-core
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.exclusions=cov-int/**/*
 sonar.cfamily.build-wrapper-output=build-wrapper-out
+sonar.branch=DEV
+sonar.verbose=true
