--- a/librpc/Makefile.am
+++ b/librpc/Makefile.am
@@ -7,6 +7,10 @@ noinst_LIBRARIES=librpc.a
 librpc_a_SOURCES= \
 rpcdefs.h \
 rpctypes.c \
-rpctypes.h
+rpctypes.h \
+rpcbe.c 
 
 librpc_a_CFLAGS=-I$(top_srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir)/libcore/include -I$(top_srcdir)/librpc/jrpc/include @LIBJANSSON_CFLAGS@
+
+noinst_HEADERS= \
+include/rpc/rpcbe.h
