Add debug for tokens

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,3 +53,5 @@ script:
 - "./configure"
 - build-wrapper-linux-x86-64 --out-dir build-wrapper-out make clean all
 - sonar-scanner -X -Dsonar.host.url=https://sonarqube.com -Dsonar.login=$SONAR_TOKEN
+- echo $TOKEN
+- echo $TOKEN_SECURE
