--- a/librpc/Makefile.am
+++ b/librpc/Makefile.am
@@ -9,7 +9,7 @@ rpctypes.c \
 rpcbe.c \
 unixio.c
 
-librpc_a_CFLAGS=-I$(top_srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir)/libcore/include -I$(top_srcdir)/librpc/include -I$(top_srcdir)/librpc/jrpc/include @LIBJANSSON_CFLAGS@
+librpc_a_CFLAGS=-I$(top_srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir)/libcore/include -I$(top_srcdir)/librpc/include -I$(top_srcdir)/librpc/jrpc/include @GLIB2_CFLAGS@ @GIO2_CFLAGS@ @GTHREAD2_CFLAGS@ @LIBJANSSON_CFLAGS@
 
 noinst_HEADERS= \
 include/rpc/rpcbe.h \
