--- a/libcore/Makefile.am
+++ b/libcore/Makefile.am
@@ -4,9 +4,11 @@ noinst_LIBRARIES=libcore.a
 
 libcore_a_SOURCES= \
 action.c \
-arch/linux/dir.c \
-arch/linux/file.c \
-arch/linux/mimetype.c \
+arch/linux/os/dir.c \
+arch/linux/os/file.c \
+arch/linux/os/mimetype.c \
+arch/linux/builtin-modules/on-demand/ondemandmod.c \
+arch/linux/builtin-modules/on-demand/ondemandmod.h \
 armadito.c \
 armadito_p.h \
 conf.c \
@@ -28,7 +30,7 @@ scan_p.h \
 status.c \
 status_p.h 
 
-libcore_a_CFLAGS=-I$(top_srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir)/libcore/include
+libcore_a_CFLAGS=-I$(top_srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir)/libcore/include -I$(top_srcdir)/libcore/arch/linux
 #libcore_a_LIBADD= 
 
 libcore_a_CFLAGS+= @GLIB2_CFLAGS@
