Fix detection event print on client side

--- a/libcore/Makefile.am
+++ b/libcore/Makefile.am
@@ -59,4 +59,5 @@ include/core/io.h \
 include/core/mimetype.h \
 include/core/ondemand.h \
 include/core/scanconf.h \
-include/core/scanctx.h
+include/core/scanctx.h \
+include/core/status.h
