Fix destination dir

--- a/man/fr/Makefile.am
+++ b/man/fr/Makefile.am
@@ -4,7 +4,7 @@ ASCIIDOCFLAGS=-a data-uri -a icons -b html5
 A2XFLAGS=--doctype manpage --format manpage -v -v 
 
 %: $(srcdir)/%.txt
-	$(A2X) $(A2XFLAGS) --destination-dir=$(top_builddir)/doc/man/fr $(srcdir)/$*.txt
+	$(A2X) $(A2XFLAGS) --destination-dir=$(top_builddir)/man/fr $(srcdir)/$*.txt
 
 %.html: $(srcdir)/%.txt
 	$(ASCIIDOC) $(ASCIIDOCFLAGS) -o $*.html $(srcdir)/$*.txt
