Add coverage flags and add first test covered in jrpc

--- a/librpc/jrpc/tests/Makefile.am
+++ b/librpc/jrpc/tests/Makefile.am
@@ -1,12 +1,14 @@
 AUTOMAKE_OPTIONS=subdir-objects
 
+TESTS = rpc-client-test
+
 check_PROGRAMS= \
 rpc-client-test \
 rpc-server-test
 
-LDFLAGS=$(PTHREAD_CFLAGS)
+LDFLAGS=$(PTHREAD_CFLAGS) $(COVERAGE_LDFLAGS)
 LDADD=$(top_builddir)/librpc/jrpc/libjrpc.a $(PTHREAD_LIBS) @LIBJANSSON_LIBS@ -lm
-AM_CPPFLAGS=$(PTHREAD_CFLAGS) -I$(top_srcdir) -I$(top_srcdir)/librpc/jrpc/include -I$(top_srcdir)/libmodule/include @LIBJANSSON_CFLAGS@ -save-temps $(PTHREAD_LIBS)
+AM_CPPFLAGS=$(PTHREAD_CFLAGS) -I$(top_srcdir) -I$(top_srcdir)/librpc/jrpc/include -I$(top_srcdir)/libmodule/include @LIBJANSSON_CFLAGS@ -save-temps $(PTHREAD_LIBS) $(COVERAGE_CFLAGS)
 
 COMMON_SOURCES= \
 test.h \
