Add make check and make coverage in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,4 +52,6 @@ before_script:
 script:
 - "./configure"
 - build-wrapper-linux-x86-64 --out-dir build-wrapper-out make clean all
+- make check || true
+- make coverage
 - sonar-scanner -X -Dsonar.host.url=https://sonarqube.com -Dsonar.login=$SONAR_TOKEN
