build travis won't fail if make coverage fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,5 +53,5 @@ script:
 - "./configure"
 - build-wrapper-linux-x86-64 --out-dir build-wrapper-out make clean all
 - make check || true
-- make coverage
+- make coverage || true
 - sonar-scanner -X -Dsonar.host.url=https://sonarqube.com -Dsonar.login=$SONAR_TOKEN
