Clean travis ci conf and set coverage dir for sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,4 @@ sonar.exclusions=cov-int/**/*
 sonar.cfamily.build-wrapper-output=build-wrapper-out
 sonar.branch=DEV
 sonar.verbose=true
+sonar.cfamily.gcov.reportsPath=coverage
