Add JSON schema generation for JSON-RPC objects

--- a/librpc/Makefile.am
+++ b/librpc/Makefile.am
@@ -15,3 +15,15 @@ noinst_HEADERS= \
 include/rpc/rpcbe.h \
 include/rpc/rpcdefs.h \
 include/rpc/rpctypes.h
+
+noinst_DATA=rpcschema.json
+
+JSON_CPP=$(CPP) -E
+JSON_CPP_FLAGS=-DGENERATE_JSON_SCHEMA -P -I$(top_srcdir)/librpc/include -I$(top_srcdir)/librpc/jrpc/include
+
+rpcschema.json: $(srcdir)/include/rpc/rpcschema.h
+	$(JSON_CPP) $(JSON_CPP_FLAGS) $< | sed -e '/^$$/d' -e 's/" "//' > $@ 
+
+rpcschema.json: $(srcdir)/include/rpc/rpcdefs.h $(srcdir)/jrpc/include/libjrpc/jsonschema.h
+
+CLEANFILES= rpcschema.json
