--- a/librpc/jrpc/Makefile.am
+++ b/librpc/jrpc/Makefile.am
@@ -19,7 +19,7 @@ marshall.c
 
 # for debug, add:
 # -DJRPC_DEBUG 
-AM_CPPFLAGS= -DJRPC_DEBUG $(PTHREAD_CFLAGS) -I$(srcdir)/include -I$(srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir) @LIBJANSSON_CFLAGS@ -save-temps 
+AM_CPPFLAGS= $(PTHREAD_CFLAGS) -I$(srcdir)/include -I$(srcdir) -I$(top_srcdir)/libmodule/include -I$(top_srcdir) @LIBJANSSON_CFLAGS@ -save-temps 
 
 noinst_HEADERS= \
 include/libjrpc/jrpc.h \
