--- a/arch/linux/nsjail/armadito-scand-nsjail.cfg.in
+++ b/arch/linux/nsjail/armadito-scand-nsjail.cfg.in
@@ -83,8 +83,10 @@ mount {
 }
 
 seccomp_string: "
+	#define AF_UNIX 1
+	#define SOCK_STREAM 1
 	POLICY armadito {
-	       ALLOW { execve, access, SYSCALL[4], SYSCALL[5], SYSCALL[6], pipe, mprotect, open, dup, read, write, lseek, fcntl, close, brk, mmap, munmap, statfs, arch_prctl, set_tid_address, set_robust_list, rt_sigaction, rt_sigprocmask, getrlimit, futex, clock_gettime, getdents, eventfd2, clone, SYSCALL[63], getcwd, sysinfo, socket, unlink, bind, listen, accept, chmod, poll }
+	       ALLOW { execve, access, SYSCALL[4], SYSCALL[5], SYSCALL[6], pipe, mprotect, open, dup, read, write, lseek, fcntl, close, brk, mmap, munmap, statfs, arch_prctl, set_tid_address, set_robust_list, rt_sigaction, rt_sigprocmask, getrlimit, futex, clock_gettime, getdents, eventfd2, clone, SYSCALL[63], getcwd, sysinfo, unlink, bind, listen, accept, chmod, poll, socket(family, type, protocol) { family == AF_UNIX && type == SOCK_STREAM} }
 	}
 	USE armadito DEFAULT KILL
 "
